# rustracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color_output.rs  main.rs  math.rs  rt.rs
src/math/: ray.rs
src/rt/: aabb.rs  bvh.rs  camera.rs  geometry.rs  hittable.rs  hittable_list.rs  material.rs  sphere.rs
