[package]
name = "rustracer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
debug = 1
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
glam = { version = "0.21.2", features = ["fast-math"] }
rayon = "1.5.1"
rand = { version = "0.8.4", features = ["small_rng"] }
